# lazycat-pure-terminal

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs  lzc-build.yml  lzc-manifest.yml  package-lock.json  package.json  package.yml  tsconfig.json  vite.config.ts
docs/: protocol.md  rmx-evaluation.md
proto/lazycat/webshell/v1/: capability.proto
src/: assets.rs  config.rs  embedded_frontend.rs  fonts.rs  lightos.rs  main.rs  proto.rs  router.rs  service.rs  state.rs  terminal.rs  terminal_manager.rs  validation.rs
src/frontend/: index.html
src/frontend/src/: config.ts  i18n.ts  keyboard.ts  main.ts  settings.ts  shell.ts  styles.css  terminal-protocol.ts  types.ts  utils.ts
