[package]
name = "lazycat-pure-terminal"
version = "0.2.3"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["tokio", "http1", "json", "ws"] }
base64 = "0.22.1"
buffa = { version = "0.5.2", features = ["json"] }
buffa-types = "0.5.2"
bytes = "1.11.0"
connectrpc = { version = "0.4.2", features = ["axum"] }
futures = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
mime_guess = "2.0.5"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
connectrpc-build = "0.4.2"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
